# python-compile

./: .gitignore  .pylintrc  MANIFEST.in  README.md  activate  activate.sh  lint  pyproject.toml  requirements.testing.txt  setup.py  test  tox.ini
.github/workflows/: docker_test.yml  lint.yml  push_macos.yml  push_ubuntu.yml  push_win.yml
experimental/: docker-compose.yml  dockerfile
src/python_compile/: cli.py  compile.py  docker_build.py  native_build.py  native_windows_build.py
src/python_compile/assets/: debian-dockerfile  demo_http_server.py  entrypoint.sh  ubuntu22-dockerfile  windows-dockerfile
tests/: test_cli.py  test_cli_native.py  test_debian.py  test_main.py  test_native.py  test_ubuntu.py  youtube_html_parser-1.0.0-py3-none-any.whl
